some front work

--- a/fast_and_delicious/templates/base/base.html
+++ b/fast_and_delicious/templates/base/base.html
@@ -13,7 +13,7 @@
                 <h1>Food Delivery</h1>
             </div>
             <div class="contact-info">
-                <p>Phone: +1 800 123 4567</p>
+                <p>Phone: <a href="tel:+18001234567">+1 800 123 4567</a></p>
             </div>
             <div class="header-buttons">
                 <button>Login</button>
@@ -30,10 +30,8 @@
     <footer>
         <div class="footer-container">
             <div class="footer-form">
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your Email">
-                <button type="submit">Subscribe</button>
-                <button type="button">Contact Us</button>
+                <p>Адрес: Улица Пушкина, дом Колотушкино</p>
+                <p>Phone: <a href="tel:+18001234567">+1 800 123 4567</a></p>
             </div>
         </div>
     </footer>
