--- a/fast_and_delicious/users/templates/users/profile.html
+++ b/fast_and_delicious/users/templates/users/profile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load cache %}
-{% load carts_tags %}
+{% load cart_tags %}
 
 {% block content %}
 <div class="row">
@@ -88,7 +88,7 @@
                     <h3 class="text-center mb-4">Корзина</h3>
                     <div class="container" id="cart-items-container">
                         <!-- Разметка корзины -->
-                        {% include "carts/includes/included_cart.html" %}
+                        {% include "cart/includes/included_cart.html" %}
                         <!-- Закончилась разметка корзины -->
                     </div>
                 </div>
