--- a/fast_and_delicious/products/templates/products/product_detail.html
+++ b/fast_and_delicious/products/templates/products/product_detail.html
@@ -20,6 +20,10 @@
         {% else %}
         <p><strong>Price:</strong> {{ product.price }} </p>
         {% endif %}
-        <button>Add to Cart</button>
+        <button>
+            <li class="nav-item">
+                <a class="nav-link  text-white" href="{% url "cart:cart_add" %}">Add to Cart</a>
+            </li>
+        </button>
     </div>
 </div>
