--- a/fast_and_delicious/static/css/HeaderFooter.css
+++ b/fast_and_delicious/static/css/HeaderFooter.css
@@ -29,7 +29,11 @@ body {
 }
 
 .header-buttons button:hover {
-    background-color: #777;
+    background-color: #555;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
 }
 
 .footer-container {
