--- a/fast_and_delicious/templates/base.html
+++ b/fast_and_delicious/templates/base.html
@@ -16,7 +16,10 @@
                 <p>Phone: <a href="tel:+18001234567">+1 800 123 4567</a></p>
             </div>
             <div class="header-buttons">
-                <button>Login</button>
+                <button><li class="nav-item">
+                            <a class="nav-link  text-white" href="{% url "user:login" %}">Login</a>
+                        </li>
+                </button>
             </div>
         </div>
     </header>
