--- a/fast_and_delicious/templates/nav.html
+++ b/fast_and_delicious/templates/nav.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<nav>
+    <ul>
+        {% for category in categories %}
+           {% include 'category/category_detail.html' %}
+        {% endfor %}
+    </ul>
+</nav>
