--- a/fast_and_delicious/templates/base.html
+++ b/fast_and_delicious/templates/base.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <h1>Fast and Delicious</h1>
+                <h1><a href="/">Fast and Delicious</a></h1>
             </div>
             <div class="contact-info">
                 <p>Phone: <a href="tel:+18001234567">+1 800 123 4567</a></p>
