--- a/fast_and_delicious/templates/nav.html
+++ b/fast_and_delicious/templates/nav.html
@@ -1,3 +1,8 @@
+{% block extra_css %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/nav.css' %}">
+{% endblock %}
+
 <nav>
     <ul>
         {% for category in categories %}
