--- a/fast_and_delicious/static/css/nav.css
+++ b/fast_and_delicious/static/css/nav.css
@@ -1,19 +1,57 @@
+.nav-container-wrapper {
+  width: 90%; /* 90% ширины родительского элемента */
+  margin: 10px auto; /* Центрирование и отступы сверху и снизу */
+  background-color: grey; /* Цвет фона */
+  border-radius: 10px; /* Закругленные углы */
+  position: relative; /* Позиция для липкости */
+  transition: top 0.3s; /* Плавный переход для верхнего отступа */
+  z-index: 1000; /* Положение на переднем плане */
+}
+
+/* Липкая навигация */
+.sticky {
+  position: fixed; /* Фиксированное положение */
+  top: 10px; /* Отступ сверху */
+  left: 50%; /* Смещение влево на 50% */
+  transform: translateX(-50%); /* Центрирование с помощью трансформации */
+}
+
+.nav-container {
+  padding: 0 2%; /* Внутренние отступы 5% с каждой стороны */
+  background-color: grey; /* Цвет фона */
+  border-radius: 10px; /* Закругленные углы */
+}
+
+/* Стили для навигации */
 nav {
   display: flex;
   justify-content: center;
+  padding: 1rem 0; /* Отступы только сверху и снизу */
 }
 
-nav ul {
+nav ul.nav {
+  display: flex;
+  justify-content: space-between; /* Равномерное распределение элементов */
+  width: 100%;
   list-style: none;
   padding: 0;
-  display: flex;
+  margin: 0;
 }
 
 nav li {
+  flex: 1; /* Элементы занимают равное пространство */
+  text-align: center; /* Центрирование текста внутри каждого элемента */
   margin: 0 10px;
 }
 
-.nav a {
+nav a {
   text-decoration: none;
   color: #333;
+  display: block;
+  padding: 10px; /* Можно изменить на ваши значения */
+}
+
+nav a:hover {
+  background-color: #ddd; /* Можно изменить на ваши значения */
+  color: #000;
 }
