--- a/fast_and_delicious/templates/product_list.html
+++ b/fast_and_delicious/templates/product_list.html
@@ -1,18 +1,31 @@
 {% extends 'base.html' %}
 
+{% load static %}
+{% load custom_filters %}
+
 {% block title %}
 Products - Food Delivery
 {% endblock %}
 
 {% block extra_css %}
-{% load static %}
 <link rel="stylesheet" href="{% static 'css/product.css' %}">
 {% endblock %}
 
 {% block content %}
+{% include 'nav.html' %}
 <div class="product-list">
-    {% for product in products %}
-        {% include 'products/product_detail.html' %}
-    {% endfor %}
+        {% with products.0.category as current_category %}
+            <h2>{{ current_category.title }}</h2>
+            <div id="category-{{ current_category.id }}">
+                {% for product in products %}
+                    {% if product.category != current_category %}
+                        {% with product.category as current_category %}
+                            <h2>{{ current_category.title }}</h2>
+                        {% endwith %}
+                    {% endif %}
+                    {% include 'products/product_detail.html' %}
+                {% endfor %}
+            </div>
+        {% endwith %}
 </div>
 {% endblock %}
