--- a/fast_and_delicious/products/templates/products/product_detail.html
+++ b/fast_and_delicious/products/templates/products/product_detail.html
@@ -1,3 +1,8 @@
+{% block extra_css %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/product.css' %}">
+{% endblock %}
+
 <div class="product-card">
     {% if product.image %}
     <img src="{{ product.image.url }}" alt="{{ product.title }}">
@@ -7,9 +12,13 @@
     <div class="product-details">
         <h2>{{ product.title }}</h2>
         <p>{{ product.description }}</p>
-        <p><strong>Price:</strong> {{ product.price }} рублей</p>
         {% if product.old_price %}
-        <p><strong>Old Price:</strong> {{ product.old_price }} рублей</p>
+        <p class="price">
+            <span class="old-price">{{ product.old_price }} </span>
+            <span class="new-price">{{ product.price }} </span>
+        </p>
+        {% else %}
+        <p><strong>Price:</strong> {{ product.price }} </p>
         {% endif %}
         <button>Add to Cart</button>
     </div>
