--- a/fast_and_delicious/static/css/product.css
+++ b/fast_and_delicious/static/css/product.css
@@ -1,5 +1,5 @@
 .product-card {
-    background-color: #f8f9fa; /* Серый цвет фона */
+    background-color: #ffffff; /* Серый цвет фона */
     border-radius: 10px; /* Скругленные углы */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Небольшая тень */
     padding: 20px;
