--- a/fast_and_delicious/templates/product_list.html
+++ b/fast_and_delicious/templates/product_list.html
@@ -15,12 +15,14 @@ Products - Food Delivery
 {% include 'nav.html' %}
 <div class="product-list">
         {% with products.0.category as current_category %}
-            <h2>{{ current_category.title }}</h2>
-            <div id="category-{{ current_category.id }}">
+            <h2 id="category-{{ current_category.id }}" class="category-title">{{ current_category.title }}</h2>
+            <div class="products-row">
                 {% for product in products %}
                     {% if product.category != current_category %}
                         {% with product.category as current_category %}
-                            <h2>{{ current_category.title }}</h2>
+                            </div>
+                            <h2 id="category-{{ current_category.id }}" class="category-title">{{ current_category.title }}</h2>
+                            <div  class="products-row">
                         {% endwith %}
                     {% endif %}
                     {% include 'products/product_detail.html' %}
