--- a/fast_and_delicious/templates/base.html
+++ b/fast_and_delicious/templates/base.html
@@ -19,6 +19,7 @@
                 <form action="/user/login/" method="get">
                     <button type="submit">Login</button>
                 </form>
+                <button type="submit">Account</button>
             </div>
         </div>
     </header>
