--- a/fast_and_delicious/templates/base.html
+++ b/fast_and_delicious/templates/base.html
@@ -19,7 +19,9 @@
                 <form action="/user/login/" method="get">
                     <button type="submit">Login</button>
                 </form>
-                <button type="submit">Account</button>
+                <form action="/user/profile/" method="get">
+                    <button type="submit">Account</button>
+                </form>
             </div>
         </div>
     </header>
