--- a/fast_and_delicious/cart/templates/carts/includes/included_cart.html
+++ b/fast_and_delicious/cart/templates/carts/includes/included_cart.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="card mb-3 text-bg-light shadow-lg">
-    {% for cart in carts %}
+    {% for cart in cart %}
         <div class="card-header">
             <h5 class="card-title">{{ cart.product.name }}</h5>
         </div>
