--- a/fast_and_delicious/templates/product_list.html
+++ b/fast_and_delicious/templates/product_list.html
@@ -7,8 +7,9 @@
 Products - Food Delivery
 {% endblock %}
 
-{% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/product.css' %}">
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+{% block css %}
+
 {% endblock %}
 
 {% block content %}
