--- a/fast_and_delicious/users/templates/users/profile.html
+++ b/fast_and_delicious/users/templates/users/profile.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_head %}
+<link rel="stylesheet" href="{% static 'css/profile.css' %}">
+{% endblock %}
 {% load cache %}
 {% load cart_tags %}
 
@@ -11,7 +14,7 @@
             <div class="col-md-5">
                 <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                     <h3 class="text-center mb-4">Профиль пользователя</h3>
-                    <form action="{% url "users:profile" %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-md-12 mb-3 text-center">
@@ -20,7 +23,7 @@
                                         alt="Аватар пользователя" class="img-fluid rounded-circle"
                                         style="max-width: 150px;">
                                 {% else %}
-                                    <img src="{% static "deps/images/baseavatar.jpg" %}"
+                                    <img src="{% static 'deps/images/baseavatar.jpg' %}"
                                         alt="Аватар пользователя" class="img-fluid rounded-circle"
                                         style="max-width: 150px;">
                                 {% endif %}
@@ -78,6 +81,10 @@
                         </div>
                         <button type="submit" class="btn btn-dark">Сохранить</button>
                     </form>
+                    <form action="{% url 'users:logout' %}" method="post" class="mt-3">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-danger">Выйти</button>
+                    </form>
                 </div>
             </div>
             <!-- Корзина -->
@@ -88,7 +95,7 @@
                     <h3 class="text-center mb-4">Корзина</h3>
                     <div class="container" id="cart-items-container">
                         <!-- Разметка корзины -->
-                        {% include "carts/includes/included_cart.html" %}
+                        {% include 'carts/includes/included_cart.html' %}
                         <!-- Закончилась разметка корзины -->
                     </div>
                 </div>
@@ -96,4 +103,4 @@
         </div>
     </div>
 </div>
-{% endblock  %}
+{% endblock %}
