--- a/fast_and_delicious/products/templates/products/product_detail.html
+++ b/fast_and_delicious/products/templates/products/product_detail.html
@@ -22,7 +22,7 @@
         {% endif %}
         <button>
             <li class="nav-item">
-                <a class="nav-link  text-white" href="{% url "cart:cart_add" %}">Add to Cart</a>
+                <a class="nav-link  text-white" href="#">Add to Cart</a>
             </li>
         </button>
     </div>
