--- a/fast_and_delicious/static/css/HeaderFooter.css
+++ b/fast_and_delicious/static/css/HeaderFooter.css
@@ -11,7 +11,7 @@ html, body {
 .page-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Устанавливает минимальную высоту для контейнера страницы, чтобы он занимал всю высоту экрана */
+    min-height: 100vh;
 }
 
 .header-container, .footer-container {
