--- a/fast_and_delicious/static/css/register.css
+++ b/fast_and_delicious/static/css/register.css
@@ -1,16 +1,15 @@
-html {
-    scroll-behavior: smooth;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+/* register.css */
 
 body {
     background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
 }
 
+.content {
+    flex: 1; /* Позволяет основному контенту занимать доступное пространство */
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
 .page-container {
     display: flex;
     flex-direction: column;
@@ -19,8 +18,6 @@ body {
 
 .container {
     min-width: 1000px;
-    margin: 0 auto;
-    padding: 0 1rem;
 }
 
 .bg-white {
@@ -51,25 +48,12 @@ body {
     margin-right: 1rem;
 }
 
-h2.text-center {
+.text-center {
     text-align: center;
     color: #333;
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 1rem;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.form-label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: bold;
-    color: #333;
 }
 
 .form-control {
@@ -87,10 +71,6 @@ form {
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.25);
-}
-
-.mb-3 {
-    margin-bottom: 1rem;
 }
 
 .btn-dark {
@@ -122,15 +102,6 @@ form {
     color: #0056b3;
 }
 
-.img-fluid {
-    max-width: 100%;
-    height: auto;
-}
-
-.rounded-circle {
-    border-radius: 50%;
-}
-
 .alert {
     margin-top: 1rem;
     padding: 0.75rem 1.25rem;
@@ -141,44 +112,5 @@ form {
 .alert-danger {
     color: #721c24;
     background-color: #f8d7da;
-    border-color: #f5c6cb;
 }
 
-#cart-items-container {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-@media (max-width: 768px) {
-    .container {
-        padding: 0 0.5rem;
-    }
-
-    .mx-3 {
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
-    }
-}
-
-.btn-danger {
-    background-color: #dc3545;
-    color: #ffffff;
-    border: none;
-    padding: 0.75rem 1.25rem;
-    border-radius: 5px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    text-align: center;
-}
-
-.btn-danger:hover {
-    background-color: #c82333;
-    transform: scale(1.05);
-}
-
-.btn-danger:focus {
-    outline: none;
-    box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
-}
