--- a/fast_and_delicious/users/templates/users/profile.html
+++ b/fast_and_delicious/users/templates/users/profile.html
@@ -16,23 +16,6 @@
                     <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="row">
-                            <div class="col-md-12 mb-3 text-center">
-                                {% if user.image %}
-                                    <img src="{{ user.image.url }}"
-                                        alt="Аватар пользователя" class="img-fluid rounded-circle"
-                                        style="max-width: 150px;">
-                                {% else %}
-                                    <img src="{% static 'deps/images/baseavatar.jpg' %}"
-                                        alt="Аватар пользователя" class="img-fluid rounded-circle"
-                                        style="max-width: 150px;">
-                                {% endif %}
-                                <input type="file" class="form-control mt-3" id="id_image"
-                                    name='image'
-                                    accept="image/*">
-                                    {% if form.image.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">{{form.image.errors}}</div>
-                                    {% endif %}
-                            </div>
                             <div class="col-md-12 mb-3">
                                 <label for="id_first_name" class="form-label">Имя*</label>
                                 <input type="text" class="form-control" id="id_first_name"
@@ -60,7 +43,7 @@
                                 <input type="text" class="form-control" id="id_username"
                                     name="username"
                                     placeholder="Введите ваше имя пользователя"
-                                    value="{{ form.username.value }}"
+                                    value="{{ user.username }}"
                                     required>
                                     {% if form.username.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">{{form.username.errors}}</div>
@@ -71,7 +54,7 @@
                                 <input type="email" class="form-control" id="id_email"
                                     name="email"
                                     placeholder="Введите ваш email *youremail@example.com"
-                                    value="{{ form.email.value }}"
+                                    value="{{ user.email }}"
                                     required>
                                     {% if form.email.errors %}
                                     <div class="alert alert-danger alert-dismissible fade show">{{form.email.errors}}</div>
