--- a/fast_and_delicious/cart/templates/cart/cart_detail.html
+++ b/fast_and_delicious/cart/templates/cart/cart_detail.html
@@ -15,11 +15,15 @@
           {% for item in cart.items.all %}
             <li class="mb-3">
               <div class="d-flex align-items-center">
-                <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" class="product-image" />
+                {% if item.product.image %}
+                  <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" class="product-image" />
+                {% else %}
+                  <img src="{% static 'images/default-product-image.jpg' %}" alt="Default image" class="product-image" />
+                {% endif %}
                 <div class="ml-3">
                   <div class="d-flex justify-content-between align-items-center">
                     <span>{{ item.product.title }} (x{{ item.quantity }})</span>
-                    <span>{{ item.product.price|floatformat:2 }} each</span>
+                    <span>{{ item.product.price|floatformat:2 }} р</span>
                   </div>
                   <div class="mt-2 d-flex">
                     <form action="{% url 'cart:increase_cart_item_quantity' item.id %}" method="post">
@@ -40,6 +44,13 @@
             </li>
           {% endfor %}
         </ul>
+        <div class="total-summary">
+          <span>Итого к оплате: {{ total_price|floatformat:2 }}</span>
+          <form action="{% url 'cart:checkout' %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-success">Купить</button>
+          </form>
+        </div>
       {% else %}
         <p class="text-center">Ваша корзина пуста.</p>
       {% endif %}
