--- a/fast_and_delicious/static/css/product.css
+++ b/fast_and_delicious/static/css/product.css
@@ -68,7 +68,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    padding-left: 25px; /* Добавлен padding-left */
 }
 
 .category-title {
@@ -78,6 +79,7 @@
     font-size: 24px;
     font-weight: bold;
     text-align: left;
+    margin-left: 25px; /* Установлен margin-left */
 }
 
 html {
