--- a/fast_and_delicious/static/css/profile.css
+++ b/fast_and_delicious/static/css/profile.css
@@ -62,6 +62,7 @@ h2.text-center {
 form {
     display: flex;
     flex-direction: column;
+    margin-top: 5px;
     gap: 1rem;
 }
 
@@ -125,10 +126,6 @@ form {
 .img-fluid {
     max-width: 100%;
     height: auto;
-}
-
-.rounded-circle {
-    border-radius: 50%;
 }
 
 .alert {
