--- a/fast_and_delicious/templates/product_list.html
+++ b/fast_and_delicious/templates/product_list.html
@@ -14,20 +14,15 @@ Products - Food Delivery
 {% block content %}
 {% include 'nav.html' %}
 <div class="product-list">
-        {% with products.0.category as current_category %}
-            <h2 id="category-{{ current_category.id }}" class="category-title">{{ current_category.title }}</h2>
-            <div class="products-row">
-                {% for product in products %}
-                    {% if product.category != current_category %}
-                        {% with product.category as current_category %}
-                            </div>
-                            <h2 id="category-{{ current_category.id }}" class="category-title">{{ current_category.title }}</h2>
-                            <div  class="products-row">
-                        {% endwith %}
-                    {% endif %}
+    {% for category in categories %}
+        <div class="products-row">
+            <h2 id="category-{{ category.id }}" class="category-title">{{ category.title }}</h2>
+            {% for product in products %}
+                {% if product.category == category %}
                     {% include 'products/product_detail.html' %}
-                {% endfor %}
-            </div>
-        {% endwith %}
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endfor %}
 </div>
 {% endblock %}
